# five-alive

./: Makefile  README.md  cabal.project  five-alive.cabal
de10-pro-e/: DE10_Pro.qsf  DE10_Pro.v  DE10_Pro_QSYS.qsys  FiveAlive_hw.tcl  Makefile
de10-pro-e/ip/DE10_Pro_QSYS/: DE10_Pro_QSYS_FiveAlive_0.ip  DE10_Pro_QSYS_iopll_0.ip
dhrystone/: Makefile  dhry.h  dhry_1.c  dmem.ihex  imem.ihex  stdlib.c
docker/: Dockerfile
inc/: HostLink.h
inc/CSRs/: UART.h
inc/HostLink/: JTAGUART.h  JTAGUARTBuffer.h  Socket.h
sim/: JTAGUART.h  Main.cpp  Makefile
software/: Makefile  boot.c  common.mk
software/common/: common.mk  dump.cpp  entry.S  generic.mk
software/dhrystone/: Makefile  dhry_1.c  link.ld  start.S
software/hello/: Makefile  boot.c
software/tests/: Makefile  test.sh
software/tests/inc/: riscv_test.h
src/: Main.hs
src/FiveAlive/: JTAGUART.hs
tests/: Makefile  getresult.cpp  test.sh
